# carbide-fork

./: CODE_OF_CONDUCT.md  Cargo.toml  Makefile.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_form.yml  config.yml  documentation-request.md  documentation_request_correction.yml  documentation_request_new.yml  feature_request.md  feature_request_form.yml  submit-question.md
.github/workflows/: ci.yaml  docker-build.yml  rest-build-push-docker.yml  rest-build-push-service.yml
crates/admin-cli/src/: rpc.rs
crates/agent/src/: agent_platform.rs  hbn.rs
crates/api/: Cargo.toml
crates/api-core/: Cargo.toml
crates/api-core/src/: api.rs  db_init.rs  errors.rs  lib.rs  redfish_platform.rs  setup.rs
crates/api-db/src/: dpa_interface.rs  expected_machine.rs  expected_power_shelf.rs  expected_switch.rs  explored_endpoints.rs  host_firmware_config.rs  lib.rs  machine.rs  machine_interface.rs  resource_pool.rs  switch.rs  work_lock_manager.rs
crates/api-model/src/: expected_machine.rs  expected_power_shelf.rs  expected_switch.rs  firmware.rs  vpc_prefix.rs
crates/api-test-helper/src/: api_server.rs
crates/api-web/: Cargo.toml
crates/api-web/src/: configuration.rs  lib.rs
crates/api-web/templates/: base.html  index.html
crates/api/src/: api.rs  errors.rs  lib.rs  redfish.rs  setup.rs
crates/api/templates/: base.html  explored_endpoint_detail.html
crates/bmc-explorer-cli/: Cargo.toml
crates/bmc-explorer-cli/src/: main.rs
crates/bmc-explorer/src/: chassis.rs  lib.rs
crates/bmc-vendor/src/: lib.rs
crates/component-manager/src/: rms.rs
crates/config-version/src/: lib.rs
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs
crates/dpf/: Makefile.toml
crates/dpf/crds/: apiextensions.k8s.io_v1_customresourcedefinition_bluefieldsoftwares.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpfoperatorconfigs.operator.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuclusters.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpudeployments.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpudevices.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpudiscoveries.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuflavors.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuflavortemplates.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpunodes.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpus.provisioning.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuservicecredentialrequests.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuserviceinterfaces.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuserviceipams.svc.dpu.nvidia.com.yaml  apiextensions.k8s.io_v1_customresourcedefinition_dpuservices.svc.dpu.nvidia.com.yaml  (+2 more)
crates/machine-controller/: Cargo.toml
crates/preingestion-manager/: Cargo.toml
crates/redfish/: Cargo.toml
crates/redfish-platform-api/: Cargo.toml
crates/redfish-platform-api/src/: error.rs  lib.rs  model.rs  ops.rs  plugin.rs  registry.rs  service.rs
crates/redfish-platform-plugins/: Cargo.toml
crates/redfish-platform-plugins/src/: hpe.rs  lib.rs  providers.rs  standard.rs
crates/redfish-platform-runtime/: Cargo.toml
crates/redfish-platform-runtime/examples/: probe_bmc.rs
crates/redfish-platform-runtime/src/: lib.rs  ops_impl.rs  registry.rs  runtime.rs
crates/rpc/: build.rs
crates/site-explorer/: Cargo.toml
designs/machine-validation/: machine-validation-reliability-control-redesign.md
docs/architecture/: redfish-platform-plugins.md
docs/development/: new_hardware_support.md
docs/getting-started/: quick-start.md
docs/observability/: core_metrics.md
docs/openapi/: spec.yaml
fern/: docs.yml
helm-prereqs/: unseal_vault.sh
rest-api/: go.mod  go.sum
rest-api/openapi/: spec.yaml
(+202 files in other folders)
